new file:   android/.gitignore 	new file:   android/app/build.gradle

--- a/auth-backend/.env
+++ b/auth-backend/.env
@@ -1,2 +1,7 @@
 MONGO_URI=mongodb+srv://mindwatch:mindwatch19@cluster0.mtea4.mongodb.net/mindwatch?retryWrites=true&w=majority
 JWT_SECRET=mindwatch
+
+HF_API_KEY=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
+
+GOOGLE_AI_KEY=AIzaSyDq_yFYJQPyV_xtjROxe7Ezy_CCwDmyTvs
+
