--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/mw-logo.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#F0F8FF"
       },
       "package": "com.maheeenasad.Mindwatch"
     },
@@ -31,7 +31,7 @@
           "image": "./assets/images/mw-logo.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#F0F8FF"
         }
       ],
       "expo-font"
@@ -48,9 +48,7 @@
       }
     },
     "owner": "maheeenasad",
-    "runtimeVersion": {
-      "policy": "sdkVersion"
-    },
+    "runtimeVersion": "1.0.0",
     "updates": {
       "enabled": true,
       "checkAutomatically": "ON_LOAD",
