--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "Mindwatch",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/mw-logo.png",
+    "icon": "./assets/mw-logo.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -13,7 +13,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/mw-logo.png",
+        "foregroundImage": "./assets/mw-logo.png",
         "backgroundColor": "#F0F8FF"
       },
       "package": "com.maheeenasad.Mindwatch"
@@ -28,7 +28,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/mw-logo.png",
+          "image": "./assets/mw-logo.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#F0F8FF"
