--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "expo-web-browser": "~14.0.2",
     "jest-expo": "~52.0.5",
     "lottie-react-native": "7.1.0",
+    "moment-timezone": "^0.5.48",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
@@ -64,6 +65,7 @@
     "@react-native-community/cli": "^18.0.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.3.0",
     "@types/styled-components": "^5.1.34",
     "jest": "^29.2.1",
