modified:   app/(tabs)/index.tsx 	modified:   app/screens/Islamic/IslamicScreen.tsx 	modified:   app/screens/Journals/JournalingScreen.tsx 	modified:   app/screens/SignUpScreen.tsx

--- a/auth-backend/.env
+++ b/auth-backend/.env
@@ -5,3 +5,9 @@ HF_API_KEY=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
 
 GOOGLE_AI_KEY=AIzaSyDq_yFYJQPyV_xtjROxe7Ezy_CCwDmyTvs
 
+CLIENT_URL=https://64a8-2400-adc5-156-e700-e93b-198-1a46-36d3.ngrok-free.app
+
+
+SENDGRID_API_KEY=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
+
+NODE_ENV=production
