--- a/auth-backend/package.json
+++ b/auth-backend/package.json
@@ -13,10 +13,13 @@
     "@google/generative-ai": "^0.23.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.48",
-    "mongoose": "^8.9.2"
+    "mongoose": "^8.9.2",
+    "nodemailer": "^6.10.1",
+    "sentiment": "^5.0.2"
   }
 }
