--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "expo-web-browser": "~14.0.2",
     "jest-expo": "~52.0.5",
     "lottie-react-native": "7.1.0",
+    "moment": "^2.30.1",
     "moment-timezone": "^0.5.48",
     "react": "18.3.1",
     "react-dom": "18.3.1",
